[package]
name = "ytakada-dev"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.58"
bson = "2.3.0"
chrono = { version = "0.4.22", features = ["serde"] }
lambda_http = "0.7.0"
mongodb = "2.3.0"
pulldown-cmark = "0.9.2"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.86"
serde_yaml = "0.9"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
